@@ -3,6 +3,8 @@ no codename
 ========
 
 051017: CVertexFormat::calc[Normal/Tangent/Binorm]Offset added.
+		CScreenBasedDivTextureCreator added - creates texture proportional
+		to backbuffer (first BB size is made divisible by supplied amount).
 051015: CUIRollout::addChildControl()/offsetPos() added.
 051011: CUIDialog::renderBegin()/renderEnd() added.
 051001: Effects are checked for valid/missing state assignments (as
